--- a/Movim/src/main/AndroidManifest.xml
+++ b/Movim/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/SplashTheme"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
