--- a/Movim/src/main/AndroidManifest.xml
+++ b/Movim/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.movim.movim"
-    android:versionCode="12"
-    android:versionName="0.17.0.0">
-
-    <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="26" />
+    package="com.movim.movim">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
