--- a/Movim/build.gradle
+++ b/Movim/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 26
 
     defaultConfig {
         applicationId "com.movim.movim"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 12
-        versionName "0.17.0.0"
+        versionCode 13
+        versionName "0.18.0.0"
     }
 
     buildTypes {
@@ -20,5 +20,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:21.0.3'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
