--- a/Movim/src/main/AndroidManifest.xml
+++ b/Movim/src/main/AndroidManifest.xml
@@ -14,11 +14,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_vectorial"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ShareActivity"
+            android:label="@string/share_new_post"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -44,5 +45,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
