--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.android.tools.build:gradle:4.0.1'
     }
 }
