--- a/Movim/src/main/AndroidManifest.xml
+++ b/Movim/src/main/AndroidManifest.xml
@@ -14,21 +14,19 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_logo"
         android:roundIcon="@mipmap/ic_logo_round"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".ShareActivity"
+        <activity android:name=".ShareActivity"
             android:label="@string/share_new_post"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
@@ -36,21 +34,18 @@
             android:name=".VisioActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/call"
-            android:launchMode="standard"
+            android:theme="@style/SplashTheme"
             android:taskAffinity=".MainActivity"
-            android:theme="@style/SplashTheme" />
+            android:launchMode="standard" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
